Fix hamburger touchability on mobile

--- a/project/static/css/new.css
+++ b/project/static/css/new.css
@@ -227,6 +227,7 @@ i.nav-item{
 .navbar-toggler{
     color:white;
     text-align: center;
+    cursor: pointer;
 }
 .nav-item{
     color:white;
